--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".prettierrc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "npmpub"
+    "release": "np"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "prettier": "^2.2.1"
   },
   "devDependencies": {
-    "npmpub": "^5.0.0",
+    "np": "^7.3.0",
     "prettier": "^2.2.1"
   }
 }
