--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sharable config for Prettier",
   "main": ".prettierrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint",
+    "lint": "eslint '.prettierrc.js' --ignore-pattern '!.prettierrc.js'",
     "release": "np"
   },
   "repository": {
@@ -29,6 +30,16 @@
     "prettier": "^2.2.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "@wolfiezero/eslint-config": "^0.1.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unicorn": "^27.0.0",
     "np": "^7.3.0",
     "prettier": "^2.2.1"
   }
